style/index.css
body {
    font-family: 'comic sans ms', Arial, sans-serif;
    background-color: bisque;
}
#bodyDiv{
    width: 80%; 
    margin: auto;    
}
header {
    width: 100%;  
}
#logoImg {
    width: 100%;
    height: auto;
    display: block; /*convert the display of the image into a block image */
    margin-left: auto; /* center the image on the parent div */
    margin-right: auto;
}
#menulist {
    width: 100%;
    margin: auto;
    background-color: #C9A07A;
    margin-top: 0.3%;
}
nav {
    text-align: center;
    font-weight: bold;
}
nav > a {
    color: white;
}
body a:hover {
	text-decoration: none;
	color: black;
}
#h1Description {
    width: 100%;
    margin: auto;
}
#categories {
    width: 80%;
    margin: auto;
    border: #8E4739 solid;
}
.rectangle {
    height: 150px;
    width: 300px;
    background-color: #8E4739;
    display: inline-block;
    vertical-align: middle;
    color: white
  }
.rectangle a {
    color: #DDD2C6
}
/*styling individual div boxes category*/
@media only screen and (min-width: 600px) {
    /* For tablets: */
    #career, #cooking, #religion {
        max-width: 30%;
        margin-left: 0.5%;
        margin-right: 0.5%;
        max-height: auto;
    }

}
@media only screen and (min-width: 768px) {
    /* For desktop: */
    #career, #cooking, #religion {
        width: 22%;
        max-width: 30%;
        margin-left: 0.5%;
        margin-right: 0.5%;
        max-height: auto;
        height: auto;
    }
    #logoImg {
        max-height: 850px;
    }
}
@media only screen and (min-width: 320px) {
    /* For mobile: */
    #career, #cooking, #religion {
        max-width: 90%;
        margin-left: 5%;
        margin-right: 5%;
        margin-bottom: 0.6%;
        max-height: auto;
    }
}
.textCenter {
    text-align: center;
}
#footer {
    width: 100%;
    margin: auto;
    background-color: #C9A07A;
    color: white;
}
#findingJob h2, #workpermit h2, #jellof h2, #bornagain h2{
    color: #8E4739;
}
#bodyContent {
    width: 80%;
    margin: auto;
}

